--- a/gb/19/3/25/n11138798.md
+++ b/gb/19/3/25/n11138798.md
@@ -1,12 +1,11 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/fyaq233/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/fyaq233/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/fyaq233/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/fyaq233/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/fyaq233/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/fyaq233/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/fyaq233/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/fyaq233/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/fyaq233/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/fyaq233/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/fyaq233/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/fyaq233/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/fyaq233/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/fyaq233/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/fyaq233/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/fyaq233/www/master/t/djy/9.jpg" title="健康"><a href="https://www.youlucky.com"><img src="https://raw.githubusercontent.com/fyaq233/www/master/t/djy/10.jpg" title="购物"></a><a href="https://donate.epochtimes.com/?utm_medium=epochtimes&utm_source=referral&utm_campaign=donate_button_djyarticleheader"><img src="https://raw.githubusercontent.com/fyaq233/www/master/t/djy/12.jpg" title="捐款"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/fyaq233/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/fyaq233/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/fyaq233/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/fyaq233/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/fyaq233/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/fyaq233/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/fyaq233/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/fyaq233/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/fyaq233/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/fyaq233/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/fyaq233/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/fyaq233/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/fyaq233/www/blob/master/README.md?zsrh#8">翻墙</a></p><p><a target="_blank" href="https://github.com/fyaq233/djy/blob/master/gb/nf5562.md#1">伪火</a> | <a target="_blank" href="https://github.com/fyaq233/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/fyaq233/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/fyaq233/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/fyaq233/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/fyaq233/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/fyaq233/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/fyaq233/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/fyaq233/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/fyaq233/ntdtv/blob/master/gb/prog1530_1.md#1">和平抗议</a> | <a target="_blank" href="https://github.com/fyaq233/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/fyaq233/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/fyaq233/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/fyaq233/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/kobfyi3602/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/kobfyi3602/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/kobfyi3602/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/kobfyi3602/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/kobfyi3602/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/kobfyi3602/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/kobfyi3602/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/kobfyi3602/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/kobfyi3602/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/kobfyi3602/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/kobfyi3602/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/kobfyi3602/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/kobfyi3602/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>输出“传媒新秩序”中共威胁全球新闻自由</h2>
-<img width="600" src="https://i.epochtimes.com/assets/uploads/2019/03/cp_chine_en-600x400.jpg" />
-<h6>图为3月25日，无国界记者组织（RSF）向全球发布一份题为“中国追求的世界传媒新秩序”的报告。（无国界记者）
-</h6>
+
+<h6></h6>
 <hr>
-<p>【<ahref="https://github.com/fyaq233/djy/blob/master/gb/tag/%E5%A4%A7%E7%BA%AA%E5%85%83.md#1">大纪元</a>2019年03月25日讯】（大纪元记者李怡欣台湾报导）3月25日，<ahref="https://github.com/fyaq233/djy/blob/master/gb/tag/%E6%97%A0%E5%9B%BD%E7%95%8C%E8%AE%B0%E8%80%85%E7%BB%84%E7%BB%87.md#1">无国界记者组织</a>（RSF）向全球发布一份题为“中国追求的世界传媒新秩序”的报告。该组织调查了中共当局控制境外信息的战略，在这份长达52页的报告中，RSF指出，跟“一带一路”相比，中共这项行动鲜为人知，却同样野心勃勃，对全世界的新闻自由构成了威胁。</p>
+<p>【<ahref="https://github.com/kobfyi3602/djy/blob/master/gb/tag/%E5%A4%A7%E7%BA%AA%E5%85%83.md#1">大纪元</a>2019年03月25日讯】（大纪元记者李怡欣台湾报导）3月25日，<ahref="https://github.com/kobfyi3602/djy/blob/master/gb/tag/%E6%97%A0%E5%9B%BD%E7%95%8C%E8%AE%B0%E8%80%85%E7%BB%84%E7%BB%87.md#1">无国界记者组织</a>（RSF）向全球发布一份题为“中国追求的世界传媒新秩序”的报告。该组织调查了中共当局控制境外信息的战略，在这份长达52页的报告中，RSF指出，跟“一带一路”相比，中共这项行动鲜为人知，却同样野心勃勃，对全世界的新闻自由构成了威胁。</p>
 <p>根据2018年全球新闻自由指数，中共治下的中国大陆在参与排名的180个国家中位列倒数第5名。</p>
 <p>过去十年来，中共企图建立世界传媒新秩序，把持国际会议话语权、渗透外国媒体；免费招待记者赴大陆；外交与孔子学院推动大外宣，恐吓灌输“意识形态正确”，并企图掩饰国内种种黑暗面。</p>
 <p>报告中点名百度、微信、华为、中国飞天诚信科技、支付宝等中国高科技公司，为中共提供控制人民的工具，“一旦交付给集权政府，有可能受到各种滥用，从而造成对资讯安全与资讯自由的严重威胁。”</p>
@@ -25,11 +24,11 @@
 <p>2015年，台湾清大社会学研究生李嘉艾的硕士论文，对台湾的《中国时报》被旺旺集团收购前后的言论转向进行研究。</p>
 <p>她观察到，中国时报在被收购后的五年，有关中国人权问题的报导减少了三分之二， 从每年平均350篇到之后的不到100篇。人权深入报导也大幅减少，从2008年的26%降到2013年的8%以下。而文章不再有批判声调，重点几乎都放在正面改革上，而不是人权侵犯。</p>
 <p>文中指出，民主国家已纷纷开始采取对策加以反击。 例如要求中共媒体协议、股东成分资讯透明化，《外国影响力透明法案》要求中共官方色彩的媒体必须以“外国代理人”身份注册。</p>
-<h2>独立媒体寥寥无几 只有<ahref="https://github.com/fyaq233/djy/blob/master/gb/tag/%E5%A4%A7%E7%BA%AA%E5%85%83.md#1">大纪元</a>、<ahref="https://github.com/fyaq233/djy/blob/master/gb/tag/%E6%96%B0%E5%94%90%E4%BA%BA.md#1">新唐人</a>等</h2>
-<p><ahref="https://github.com/fyaq233/djy/blob/master/gb/tag/%E6%97%A0%E5%9B%BD%E7%95%8C%E8%AE%B0%E8%80%85%E7%BB%84%E7%BB%87.md#1">无国界记者组织</a>建议民主国家政府要鼓励、支持独立的中文媒体，尤其是在有大量海外华人的国家里，更应对独立的中文媒体加以支持。</p>
+<h2>独立媒体寥寥无几 只有<ahref="https://github.com/kobfyi3602/djy/blob/master/gb/tag/%E5%A4%A7%E7%BA%AA%E5%85%83.md#1">大纪元</a>、<ahref="https://github.com/kobfyi3602/djy/blob/master/gb/tag/%E6%96%B0%E5%94%90%E4%BA%BA.md#1">新唐人</a>等</h2>
+<p><ahref="https://github.com/kobfyi3602/djy/blob/master/gb/tag/%E6%97%A0%E5%9B%BD%E7%95%8C%E8%AE%B0%E8%80%85%E7%BB%84%E7%BB%87.md#1">无国界记者组织</a>建议民主国家政府要鼓励、支持独立的中文媒体，尤其是在有大量海外华人的国家里，更应对独立的中文媒体加以支持。</p>
 <p>报告指出中共控制海外华人的方式之一，是对海外中文媒体的影响与控制。海外华人总数约5000万人，以往对中共政权都采批判观点。六四屠杀后，中共开始了解“为自己建立正面形象的战略中，造成了极大阻碍，于是开始一间间收购这些媒体，同时也在海外开创自己的媒体”。</p>
 <p>美国是海外华人最多的西方国家，大约有500万华人。侨报、美国中文电视受到中共官方秘密控制，报导内容直接取材于中共官方媒体。</p>
-<p>除了由旅居美国的知名异议者所创立的媒体，或是大纪元时报、<ahref="https://github.com/fyaq233/djy/blob/master/gb/tag/%E6%96%B0%E5%94%90%E4%BA%BA.md#1">新唐人</a>电视台这两个由受到中共迫害的法轮功学员所主持的媒体，真正的独立媒体很少，可谓寥寥无几。</p>
+<p>除了由旅居美国的知名异议者所创立的媒体，或是大纪元时报、<ahref="https://github.com/kobfyi3602/djy/blob/master/gb/tag/%E6%96%B0%E5%94%90%E4%BA%BA.md#1">新唐人</a>电视台这两个由受到中共迫害的法轮功学员所主持的媒体，真正的独立媒体很少，可谓寥寥无几。</p>
 <p>澳洲是西方世界第三大的海外华人居住地，可是却有将近95%的中文报纸是由中共官方主控的。#</p>
 <p>责任编辑：晓玫</p>
 
@@ -37,42 +36,47 @@
 
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/fyaq233/djy/blob/master/gb/11/7/8/n3309715.md#1">【新纪元】新唐人在台成功续约 国际赞扬</a></li>
-<li><a href="https://github.com/fyaq233/djy/blob/master/gb/11/8/10/n3340135.md#1">华邮：中共黑手伸及印尼 迫关闭电台</a></li>
-<li><a href="https://github.com/fyaq233/djy/blob/master/gb/11/9/28/n3385436.md#1">新唐人风雨十年 主流嘉宾赞誉</a></li>
-<li><a href="https://github.com/fyaq233/djy/blob/master/gb/12/1/25/n3495051.md#1">新闻自由评比 台湾排名上升</a></li>
-<li><a href="https://github.com/fyaq233/djy/blob/master/gb/18/2/22/n10161894.md#1">【禁闻】拒配合中共 华硕云端服务撤出中国</a></li>
-<li><a href="https://github.com/fyaq233/djy/blob/master/gb/18/3/8/n10201915.md#1">苹果iCloud中国运营首日 用户资料传被盗</a></li>
-<li><a href="https://github.com/fyaq233/djy/blob/master/gb/18/4/27/n10340680.md#1">全球新闻自由指数：中国囚50余记者 倒数第五</a></li>
-<li><a href="https://github.com/fyaq233/djy/blob/master/gb/18/4/28/n10343891.md#1">新闻自由指数倒数第五 中共模式输出害亚太</a></li>
-<li><a href="https://github.com/fyaq233/djy/blob/master/gb/20/4/23/n12055438.md#1">新创恐成纾困孤儿 民众党：政府应提供小额专案信保</a></li>
-<li><a href="https://github.com/fyaq233/djy/blob/master/gb/20/4/23/n12055490.md#1">纾困航空业 台交部加码78.95亿</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/11/7/8/n3309715.md#1">【新纪元】新唐人在台成功续约 国际赞扬</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/11/8/10/n3340135.md#1">华邮：中共黑手伸及印尼 迫关闭电台</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/11/9/28/n3385436.md#1">新唐人风雨十年 主流嘉宾赞誉</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/12/1/25/n3495051.md#1">新闻自由评比 台湾排名上升</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/18/2/22/n10161894.md#1">【禁闻】拒配合中共 华硕云端服务撤出中国</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/18/3/8/n10201915.md#1">苹果iCloud中国运营首日 用户资料传被盗</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/18/4/27/n10340680.md#1">全球新闻自由指数：中国囚50余记者 倒数第五</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/18/4/28/n10343891.md#1">新闻自由指数倒数第五 中共模式输出害亚太</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/6/5/n13752795.md#1">斯洛伐克国会副议长率团抵台 ：以行动挺台</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/6/5/n13752839.md#1">访胡佛研究所 朱立伦：与世界民主阵营交朋友</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/2/22/n11887949.md#1">美参议员：中共刻意控制新冠病毒信息流动</a></li>
-<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/2/6/n10120117.md#1" target="_blank">林辉：文革“群丑图”从热传到被封杀的背后</a></li><li><a href="https://github.com/fyaq233/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank">证人描述活摘恐怖</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/17/4/8/n9014844.md#1" target="_blank">【细语人生】见证大法的神奇（4）</a></li>
+<li><a href="https://github.com/ychojm359/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank">人心向善 大陆当初盛况</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/17/11/30/n9910984.md#1" target="_blank">文革中自杀的名人（1）人民日报总编邓拓</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/9/27/n10744431.md#1" target="_blank">顽疾绝症不医而愈 小小少年们的神奇际遇</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/fyaq233/djy/blob/master/gb/20/4/22/n12052901.md#1">分析：金正恩残废或病故 中共恶梦将成真</a></li>
-<li><a href="https://github.com/fyaq233/djy/blob/master/gb/20/4/21/n12050056.md#1">中共发言人急于推卸国际追责 搞出乌龙</a></li>
-<li><a href="https://github.com/fyaq233/djy/blob/master/gb/20/4/22/n12050955.md#1">【拍案惊奇】谁接班金正恩？传习在秦岭探军工</a></li>
-<li><a href="https://github.com/fyaq233/djy/blob/master/gb/20/4/21/n12049687.md#1">【快讯】美官员：金正恩可能手术后残废</a></li>
-<li><a href="https://github.com/fyaq233/djy/blob/master/gb/20/4/22/n12051023.md#1">中山校长：威胁国安的人来校分享 我痛心疾首！</a></li>
-<li><a href="https://github.com/fyaq233/djy/blob/master/gb/20/4/20/n12046904.md#1">卡卡捧谭德塞遭批 其母亲与WHO关系被起底</a></li>
-<li><a href="https://github.com/fyaq233/djy/blob/master/gb/20/4/21/n12050674.md#1">郎朗参加全球抗疫音乐会 国籍标注美国引热议</a></li>
-<li><a href="https://github.com/fyaq233/djy/blob/master/gb/20/4/20/n12046991.md#1">隔离14天胖到80公斤 陈伟霆：快崩溃</a></li>
-<li><a href="https://github.com/fyaq233/djy/blob/master/gb/20/4/22/n12053302.md#1">三月大婴儿趴睡死亡 马伊琍斥：专家是刽子手</a></li>
-<li><a href="https://github.com/fyaq233/djy/blob/master/gb/20/4/20/n12047317.md#1">甫参加亲共WHO音乐会 山姆?史密斯自曝染疫</a></li>
-<li><a href="https://github.com/fyaq233/djy/blob/master/gb/20/4/19/n12044305.md#1">宝玉和黛玉的人间再相逢</a></li>
-<li><a href="https://github.com/fyaq233/djy/blob/master/gb/20/4/22/n12051978.md#1">印度专家：5000年前文献“预言”中共病毒</a></li>
-<li><a href="https://github.com/fyaq233/djy/blob/master/gb/13/2/18/n3803627.md#1">米开朗基罗（5）《圣家族》</a></li>
-<li><a href="https://github.com/fyaq233/djy/blob/master/gb/20/4/6/n12008574.md#1">人的善恶功过是能秤出重量的</a></li>
-<li><a href="https://github.com/fyaq233/djy/blob/master/gb/20/4/19/n12043816.md#1">应运出世? 华盛顿佩剑出征</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/5/12/n13734778.md#1">【百年真相】替毛背锅“红色特工”潘汉年惨死</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/5/5/n13727490.md#1">【百年真相】密谋“金融政变” 肖建华将现身？</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/5/28/n13747559.md#1">一首名曲奏出大提琴前所未有的力量</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/5/29/n13748202.md#1">【未解之谜】通行灵界的科学家之二 天堂见闻</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/5/18/n13739799.md#1">【奇梦】姻缘天定 女子依梦得夫 男子依梦得妻</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/6/4/n13752277.md#1">【马克时空】预警机、侦察机扮奇兵 助乌军精准打击俄军</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/5/26/n13746033.md#1">【探索时分】四大理由 中共应向俄罗斯开战？</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/6/4/n13752508.md#1">【唐瑞讲故事】睡美人</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/6/3/n13751953.md#1">刚送完满月礼盒 昆凌首晒产后全身照惊呆网友</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/6/4/n13752436.md#1">李克强十万人大会事先获得习近平默许？</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/6/4/n13752163.md#1">深圳前市长陈如桂落马 传有三大原因</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/6/3/n13751953.md#1">刚送完满月礼盒 昆凌首晒产后全身照惊呆网友</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/6/3/n13751923.md#1">港星杨英伟出售千万房产 已举家移民奥地利</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/6/3/n13751832.md#1">评论：《壮志凌云2》证明好莱坞无需中国市场</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/6/3/n13751310.md#1">张娜拉6月底结婚 赞新郎笑容美好且诚实善良</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/6/2/n13751276.md#1">好莱坞明星强尼戴普诽谤案胜诉 台主播发感言</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/5/26/n13746023.md#1">腰痛是肾脏在求救？肾是沉默器官 4症状要警惕</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/6/1/n13750249.md#1">长白发原因不一定是衰老！2种方法白发变黑发</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/6/3/n13751690.md#1">危险长新冠4类人警惕 疫苗也挡不住？1招改善</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/6/3/n13751309.md#1">研究发现人类肝脏永远年轻 只有不到三岁</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/6/4/n13752195.md#1">5个早上常见的习惯 会降低睡眠品质</a></li>
 <hr>
 
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/fyaq233/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/fyaq233/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/19/3/25/n11138798.htm">输出“传媒新秩序”中共威胁全球新闻自由</a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/kobfyi3602/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/kobfyi3602/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/19/3/25/n11138798.htm">输出“传媒新秩序”中共威胁全球新闻自由</a></p><hr>
 
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="http://d1p1.ip.zn2.us/v.php?action=qrcode&url=https://github.com/fyaq233/djy/blob/master/gb/19/3/25/n11138798.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/fyaq233/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fyaq233/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/fyaq233/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/fyaq233/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/fyaq233/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fyaq233/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/fyaq233/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fyaq233/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/fyaq233/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fyaq233/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/fyaq233/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fyaq233/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/fyaq233/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fyaq233/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/fyaq233/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fyaq233/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/fyaq233/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fyaq233/djy/master/gb/300/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/fyaq233/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fyaq233/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/fyaq233/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fyaq233/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/fyaq233/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fyaq233/djy/master/gb/300/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/fyaq233/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fyaq233/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/fyaq233/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fyaq233/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/fyaq233/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fyaq233/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/fyaq233/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fyaq233/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/fyaq233/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fyaq233/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/fyaq233/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fyaq233/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/fyaq233/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fyaq233/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/fyaq233/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fyaq233/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/fyaq233/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fyaq233/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/fyaq233/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fyaq233/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/fyaq233/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fyaq233/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/fyaq233/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fyaq233/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/kobfyi3602/djy/blob/master/gb/19/3/25/n11138798.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/kobfyi3602/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/kobfyi3602/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/kobfyi3602/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
